<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.reactome.server.graph</groupId>
    <artifactId>graph-core</artifactId>

    <packaging>jar</packaging>
    <version>2.0.0-SNAPSHOT</version>
    <name>Graph Core Next Generation</name>

    <description>
        The Reactome Graph Project aims to model the Reactome knowledgebase into a interconnected graph. For more
        information visit the reactome github repository.
    </description>

    <url>https://github.com/reactome/graph-core</url>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.5</version>
    </parent>

    <organization>
        <name>The European Bioinformatics Institute</name>
        <url>http://www.ebi.ac.uk/</url>
    </organization>

    <developers>
        <developer>
            <id>gviteri</id>
            <name>Guilherme Viteri</name>
            <email>gviteri@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
        <developer>
            <id>fkorn</id>
            <name>Florian Korninger</name>
        </developer>
    </developers>

    <properties>
        <!--        <spring.data.neo4j.version>6.0.8</spring.data.neo4j.version>-->
        <!-- TODO Remember to change version, or remove and let Spring boot deals with it -->
        <spring.data.neo4j.version>6.0.10-GH-2290-SNAPSHOT</spring.data.neo4j.version>


        <logback.version>1.2.3</logback.version>
        <reflection.version>0.9.12</reflection.version>
        <jackson.version>2.12.3</jackson.version>
        <commons.lang3.version>3.12.0</commons.lang3.version>
        <jodd.bean.version>5.1.6</jodd.bean.version>

        <!--build-->
        <jdk.version>11</jdk.version>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <dependency.locations.enabled>false</dependency.locations.enabled>

        <!-- Test dependencies -->
        <reactome.base>1.2.21</reactome.base>
    </properties>

    <dependencies>
        <!-- This is everything needed to work with Spring Data Neo4j 6.0. -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-neo4j</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.data</groupId>
                    <artifactId>spring-data-neo4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- OVERWRITING SPRING BOOT VERSION -->
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-neo4j</artifactId>
            <version>${spring.data.neo4j.version}</version>
        </dependency>

        <!--Reflection library -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>${reflection.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.reactome.base</groupId>
            <artifactId>reactome-base</artifactId>
            <version>${reactome.base}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jodd</groupId>
            <artifactId>jodd-bean</artifactId>
            <version>${jodd.bean.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>

            <!--Plugin needed to force maven resources to latest version. Default version contains a bug-->
            <!--preventing maven to filter resources containg a @ symbol-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>

                <configuration>
                    <escapeString>\</escapeString>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>**/logback.xml</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--
                Maven plugin is necessary to test AspectJ when running in command line.
                Running on IntelliJ will fire the ajc and this will work automatically.
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.4</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
                <executions>
                    <execution>
                        <id>test-compile</id>
                        <configuration>
                            <weaveMainSourceFolder>true</weaveMainSourceFolder>
                        </configuration>
                        <goals>
                            <goal>compile</goal>       <!-- use this goal to weave all your main classes -->
                            <goal>test-compile</goal>  <!-- use this goal to weave all your test classes -->
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjrt</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>mvn-central</id>
            <name>The Maven Central repository</name>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>nexus-ebi-repo</id>
            <name>The EBI internal repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>spring-libs-release</id>
            <url>https://repo.spring.io/libs-snapshot</url>
        </repository>

    </repositories>

    <!--Configures the distribution to nexus repository -->
    <distributionManagement>
        <!-- EBI repo -->
        <repository>
            <id>pst-release</id>
            <name>EBI Nexus Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
        </repository>
        <!-- EBI SNAPSHOT repo -->
        <snapshotRepository>
            <uniqueVersion>false</uniqueVersion>
            <id>pst-snapshots</id>
            <name>EBI Nexus Snapshots Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
